Flume and Spark Integration

--- a/Flume-to-spark.conf
+++ b/Flume-to-spark.conf
@@ -9,13 +9,13 @@ sparkpc.sources.logsource.command = tail -F /opt/gen_logs/logs/access.log
 
 # Describe the logger sink
 sparkpc.sinks.sparksink.type = org.apache.spark.streaming.flume.sink.SparkSink
-sparkpc.sinks.sparksink.hostname = gw01.itversity.com
+sparkpc.sinks.sparksink.hostname = gw01.mycluster.com
 sparkpc.sinks.sparksink.port = 19999
 sparkpc.sinks.sparksink.channel = memoryChannel
 
 #Desceribe the hdfs sink
 sparkpc.sinks.hdfssink.type = hdfs
-sparkpc.sinks.hdfssink.hdfs.path = hdfs://nn01.itversity.com:8020/user/prashantchopra/wlabssa/sparkpc
+sparkpc.sinks.hdfssink.hdfs.path = hdfs://nn01.mycluster.com:8020/user/prashantchopra/wlabssa/sparkpc
 sparkpc.sinks.hdfssink.hdfs.fileType = DataStream
 sparkpc.sinks.hdfssink.hdfs.rollInterval = 120
 sparkpc.sinks.hdfssink.hdfs.rollSize = 10485760
